button alignment fixes. Receipt print page

--- a/app/assets/stylesheets/dashboard_new.scss
+++ b/app/assets/stylesheets/dashboard_new.scss
@@ -1589,10 +1589,9 @@ section.grey{
 }
 .apply-btn{
 	display: inline-block;
-    margin: 10px 0px;
     background-color: #d6d6d6;
     color: #323232;
-    padding: 8px 20px;
+    padding: 6px 20px;
     font-weight: 500;
     font-size: 16px;
 }
